<resources>
    <string name="app_name">Teacher Assist</string>
    <string name="classes_lessons">Classes</string>
    <string name="title_students">Students</string>
    <string name="title_settings">Settings</string>
    <string name="no_description">No description</string>
    <string name="class_name_placeholder">Class name</string>
    <string name="class_description_placeholder">Class description</string>
    <string name="weekday_placeholder">Weekday</string>
    <string name="timestamp_placeholder">00:00 – 00:00</string>
    <string name="start_time_placeholder">10:00</string>
    <string name="end_time_placeholder">12:00</string>
    <string name="color_placeholder">Background color</string>
    <string name="class_details_placeholder">Class details</string>
    <string name="class_label">Class:</string>
    <string name="description_label">Description:</string>
    <string name="weekday_label">Weekday:</string>
    <string name="when_label">When:</string>
    <string name="color_label">Color:</string>
    <string name="when_placeholder">Weekday 00:00 – 00:00</string>
    <string name="add_button">Add</string>
    <string name="add_class_label">Add class</string>
    <string name="add_student_label">Add student</string>
    <string name="save_class_label">Save class</string>
    <string name="save_student_label">Save student</string>
    <string name="cancel_label">Cancel</string>
    <string name="lesson_time">Lesson time:</string>
    <string name="classes_empty">Class list is empty</string>
    <string name="students_empty">Students list is empty</string>
    <string name="grades_empty">Grades list is empty</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="dialog_delete_class_title">Delete class</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_class_message">Are you sure you want to delete this class?</string>
    <string name="dialog_delete_student_title">Delete student</string>
    <string name="dialog_delete_student_message">Are you sure you want to delete this student?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="student_name_placeholder">Name</string>
    <string name="student_last_name_placeholder">Lastname</string>
    <string name="student_number_placeholder">123456</string>
    <string name="student_number_text">Number</string>
    <string name="student_image_text">Student image</string>
    <string name="student_name_label">Name:</string>
    <string name="student_last_name_label">Last name:</string>
    <string name="student_number_label">Student id number:</string>
    <string name="assign_student_label">Assign new student</string>
    <string name="student_list_label">Enrolled students:</string>
    <string name="classes_list_label">Classes enrolled:</string>
    <string name="student_grades_label">Student grades:</string>
    <string name="grade_placeholder">5</string>
    <string name="dialog_grade_title">Grade details</string>
    <string name="dialog_grade_message">"Grade: %1$s\nDescription: %2$s\nDate: %3$s"</string>
    <string name="add_grade_label">Add grade</string>
    <string name="grade_label">Grade</string>
    <string name="remove_from_class_label">Remove from class</string>
    <string name="dialog_remove_from_class_message">Are you sure you want to remove this student from class?</string>
    <string name="dialog_remove_from_class_title">Remove student</string>
    <string name="clear_app_data">Clear app data</string>>
    <string name="warning">Warning</string>
    <string name="dialog_clear_app_data_message">Are you sure you want to clear all app data?</string>
    <string name="theme_label">Theme:</string>
    <string name="theme_placeholder">Theme</string>
</resources>