<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/className"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/class_name_placeholder"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/classDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/class_description_placeholder"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/gray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weekDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:lines="1"
                    android:shadowColor="#FFFFFF"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    android:text="@string/weekday_placeholder"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#0D0D0D"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeStamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:lines="1"
                    android:shadowColor="#FFFFFF"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    android:text="@string/timestamp_placeholder"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>